[package]
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"
name = "boxercrab"
version = "0.2.0"

[dependencies]
log = "0.4.11"
log4rs = "1.0"
nom = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3.22"
sqlx = { git = "https://github.com/howard0su/sqlx.git", branch = "master", default-features = false, features = ["runtime-tokio-native-tls", "mysql", "json", "macros", "time", "decimal"] }
lazy_static = "1.4"
pretty_env_logger = "0.4.0"
bytes = "0.5.6"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "bcrab"
path = "src/cli.rs"
