[package]
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2018"
name = "boxercrab"
version = "0.2.0"

[dependencies]
log = "0.4.11"
log4rs = "1.0"
nom = "6"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.22"
lazy_static = "1.4"
bytes = "0.5.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde_yaml = "0.8"
pretty_env_logger = "0.4.0"
